fix(tts): try chmod 755 and sh -c fallback for silk_encoder exec
Android SELinux blocks exec from app data dirs. Try:
1. chmod 755 via system command
2. Direct exec
3. Fallback: exec through /system/bin/sh -c